--- a/test_notebook.ipynb
+++ b/test_notebook.ipynb
@@ -52,8 +52,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-08T21:38:52.398742Z",
-     "start_time": "2019-03-08T21:38:50.152509Z"
+     "end_time": "2019-03-16T13:12:11.210601Z",
+     "start_time": "2019-03-16T13:12:08.862387Z"
     }
    },
    "outputs": [],
@@ -67,8 +67,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-08T21:38:56.451874Z",
-     "start_time": "2019-03-08T21:38:52.406592Z"
+     "end_time": "2019-03-16T13:12:15.096702Z",
+     "start_time": "2019-03-16T13:12:11.227816Z"
     },
     "scrolled": true
    },
@@ -87,8 +87,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-08T21:38:57.107214Z",
-     "start_time": "2019-03-08T21:38:56.491568Z"
+     "end_time": "2019-03-16T13:12:15.870136Z",
+     "start_time": "2019-03-16T13:12:15.132842Z"
     }
    },
    "outputs": [
@@ -250,8 +250,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-08T21:38:59.674757Z",
-     "start_time": "2019-03-08T21:38:57.150621Z"
+     "end_time": "2019-03-16T13:12:17.967128Z",
+     "start_time": "2019-03-16T13:12:15.925335Z"
     },
     "scrolled": false
    },
@@ -293,8 +293,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-08T21:39:05.733335Z",
-     "start_time": "2019-03-08T21:39:04.826594Z"
+     "end_time": "2019-03-16T13:12:18.713992Z",
+     "start_time": "2019-03-16T13:12:18.020131Z"
     }
    },
    "outputs": [
@@ -341,11 +341,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-08T21:39:26.376109Z",
-     "start_time": "2019-03-08T21:39:24.185677Z"
+     "end_time": "2019-03-16T13:12:58.548511Z",
+     "start_time": "2019-03-16T13:12:57.002000Z"
     },
     "scrolled": false
    },
@@ -383,11 +383,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-08T21:39:26.472379Z",
-     "start_time": "2019-03-08T21:39:26.452840Z"
+     "end_time": "2019-03-16T14:47:07.693260Z",
+     "start_time": "2019-03-16T14:47:07.673616Z"
     }
    },
    "outputs": [
@@ -399,7 +399,7 @@
        " 'max5pourcent': 0.7820639101795066}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,11 +428,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-08T21:39:29.169279Z",
-     "start_time": "2019-03-08T21:39:29.130752Z"
+     "end_time": "2019-03-16T13:13:03.201038Z",
+     "start_time": "2019-03-16T13:13:03.187426Z"
     }
    },
    "outputs": [],
@@ -479,11 +479,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-08T21:39:30.986808Z",
-     "start_time": "2019-03-08T21:39:30.907931Z"
+     "end_time": "2019-03-16T13:13:05.677083Z",
+     "start_time": "2019-03-16T13:13:05.652961Z"
     }
    },
    "outputs": [
@@ -504,11 +504,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-08T21:39:32.789508Z",
-     "start_time": "2019-03-08T21:39:32.731717Z"
+     "end_time": "2019-03-16T13:13:07.981649Z",
+     "start_time": "2019-03-16T13:13:07.949737Z"
     }
    },
    "outputs": [
@@ -542,11 +542,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-08T21:39:34.348221Z",
-     "start_time": "2019-03-08T21:39:34.027301Z"
+     "end_time": "2019-03-16T13:13:10.287576Z",
+     "start_time": "2019-03-16T13:13:10.072752Z"
     }
    },
    "outputs": [
@@ -563,7 +563,7 @@
        "  3: 0.1782178217821782}}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,11 +581,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-08T21:39:35.751028Z",
-     "start_time": "2019-03-08T21:39:35.724682Z"
+     "end_time": "2019-03-16T13:13:13.221861Z",
+     "start_time": "2019-03-16T13:13:13.187209Z"
     }
    },
    "outputs": [
@@ -598,7 +598,7 @@
        " 3: {0: 0.5527950310559007, 1: 0.4472049689440994}}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,11 +629,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-08T21:39:37.239361Z",
-     "start_time": "2019-03-08T21:39:37.212376Z"
+     "end_time": "2019-03-16T13:13:55.484861Z",
+     "start_time": "2019-03-16T13:13:55.453763Z"
     }
    },
    "outputs": [
@@ -655,11 +655,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-08T21:39:39.185996Z",
-     "start_time": "2019-03-08T21:39:39.128238Z"
+     "end_time": "2019-03-16T13:13:56.800461Z",
+     "start_time": "2019-03-16T13:13:56.781058Z"
     }
    },
    "outputs": [
@@ -698,11 +698,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-08T21:39:40.760330Z",
-     "start_time": "2019-03-08T21:39:40.705539Z"
+     "end_time": "2019-03-16T13:14:10.562220Z",
+     "start_time": "2019-03-16T13:14:10.544837Z"
     }
    },
    "outputs": [
@@ -724,11 +724,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-08T21:39:42.043762Z",
-     "start_time": "2019-03-08T21:39:41.984261Z"
+     "end_time": "2019-03-16T13:14:13.641462Z",
+     "start_time": "2019-03-16T13:14:13.616568Z"
     }
    },
    "outputs": [
@@ -785,11 +785,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-08T21:39:45.185185Z",
-     "start_time": "2019-03-08T21:39:45.138657Z"
+     "end_time": "2019-03-16T13:14:34.037583Z",
+     "start_time": "2019-03-16T13:14:34.003563Z"
     }
    },
    "outputs": [
@@ -817,11 +817,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-08T21:39:47.800815Z",
-     "start_time": "2019-03-08T21:39:47.748816Z"
+     "end_time": "2019-03-16T13:14:35.339328Z",
+     "start_time": "2019-03-16T13:14:35.310113Z"
     }
    },
    "outputs": [
@@ -867,11 +867,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-08T21:39:49.589402Z",
-     "start_time": "2019-03-08T21:39:49.526258Z"
+     "end_time": "2019-03-16T13:14:38.829804Z",
+     "start_time": "2019-03-16T13:14:38.790304Z"
     }
    },
    "outputs": [
@@ -1206,11 +1206,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 56,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-08T21:40:08.499336Z",
-     "start_time": "2019-03-08T21:40:08.384624Z"
+     "end_time": "2019-03-16T14:55:22.938586Z",
+     "start_time": "2019-03-16T14:55:22.840361Z"
     }
    },
    "outputs": [
@@ -1218,11 +1218,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Estimation de la proba de l'individu 0 par MLNaiveBayesClassifier : {0: 5.265474022893807e-11, 1: 8.779438846356187e-12}\n",
+      "Estimation de la proba de l'individu 0 par MLNaiveBayesClassifier : {1: 8.779438846356187e-12, 0: 5.265474022893807e-11}\n",
       "Estimation de la classe de l'individu 0 par MLNaiveBayesClassifier : 0\n",
-      "Estimation de la proba de l'individu 1 par MLNaiveBayesClassifier : {0: 0.0, 1: 1.9903404816168002e-09}\n",
+      "Estimation de la proba de l'individu 1 par MLNaiveBayesClassifier : {1: 1.9903404816168002e-09, 0: 0.0}\n",
       "Estimation de la classe de l'individu 1 par MLNaiveBayesClassifier : 1\n",
-      "Estimation de la proba de l'individu 2 par MLNaiveBayesClassifier : {0: 3.6835223975945704e-10, 1: 1.5920340255297033e-06}\n",
+      "Estimation de la proba de l'individu 2 par MLNaiveBayesClassifier : {1: 1.5920340255297033e-06, 0: 3.6835223975945704e-10}\n",
       "Estimation de la classe de l'individu 2 par MLNaiveBayesClassifier : 1\n",
       "test en apprentissage : {'VP': 350, 'VN': 116, 'FP': 22, 'FN': 54, 'Precision': 0.9408602150537635, 'Rappel': 0.8663366336633663}\n",
       "test en validation: {'VP': 49, 'VN': 60, 'FP': 2, 'FN': 89, 'Precision': 0.9607843137254902, 'Rappel': 0.35507246376811596}\n"
@@ -1240,26 +1240,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 88,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-06T13:49:56.245552Z",
-     "start_time": "2019-03-06T13:49:55.742496Z"
-    }
+     "end_time": "2019-03-16T15:57:45.671321Z",
+     "start_time": "2019-03-16T15:57:45.581768Z"
+    },
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Estimation de la proba de l'individu 0 par MAPNaiveBayesClassifier : {0: 0.6719863008964105, 1: 0.32801369910358946}\n",
+      "Estimation de la proba de l'individu 0 par MAPNaiveBayesClassifier : {1: 0.32801369910358935, 0: 0.6719863008964106}\n",
       "Estimation de la classe de l'individu 0 par MAPNaiveBayesClassifier : 0\n",
-      "Estimation de la proba de l'individu 1 par MAPNaiveBayesClassifier : {0: 0.0, 1: 1.0}\n",
+      "Estimation de la proba de l'individu 1 par MAPNaiveBayesClassifier : {1: 1.0, 0: 0.0}\n",
       "Estimation de la classe de l'individu 1 par MAPNaiveBayesClassifier : 1\n",
-      "Estimation de la proba de l'individu 2 par MAPNaiveBayesClassifier : {0: 7.90267948988375e-05, 1: 0.9999209732051012}\n",
+      "Estimation de la proba de l'individu 2 par MAPNaiveBayesClassifier : {1: 0.9999209732051011, 0: 7.902679489883755e-05}\n",
       "Estimation de la classe de l'individu 2 par MAPNaiveBayesClassifier : 1\n",
-      "test en apprentissage : {'VP': 382, 'VN': 111, 'FP': 27, 'FN': 22, 'Précision': 0.9339853300733496, 'Rappel': 0.9455445544554455}\n",
-      "test en validation: {'VP': 53, 'VN': 57, 'FP': 5, 'FN': 85, 'Précision': 0.9137931034482759, 'Rappel': 0.38405797101449274}\n"
+      "test en apprentissage : {'VP': 382, 'VN': 111, 'FP': 27, 'FN': 22, 'Precision': 0.9339853300733496, 'Rappel': 0.9455445544554455}\n",
+      "test en validation: {'VP': 53, 'VN': 57, 'FP': 5, 'FN': 85, 'Precision': 0.9137931034482759, 'Rappel': 0.38405797101449274}\n"
      ]
     }
    ],
