Added likelihood/a posteriori formulae

--- a/test_notebook.ipynb
+++ b/test_notebook.ipynb
@@ -52,8 +52,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T13:12:11.210601Z",
-     "start_time": "2019-03-16T13:12:08.862387Z"
+     "end_time": "2019-03-16T18:43:24.925662Z",
+     "start_time": "2019-03-16T18:43:22.598080Z"
     }
    },
    "outputs": [],
@@ -64,15 +64,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T13:12:15.096702Z",
-     "start_time": "2019-03-16T13:12:11.227816Z"
+     "end_time": "2019-03-16T18:44:07.854908Z",
+     "start_time": "2019-03-16T18:44:07.782439Z"
     },
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# to allow autoreload of projet.py\n",
     "%load_ext autoreload\n",
@@ -84,11 +93,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T13:12:15.870136Z",
-     "start_time": "2019-03-16T13:12:15.132842Z"
+     "end_time": "2019-03-16T18:44:10.505377Z",
+     "start_time": "2019-03-16T18:44:09.956846Z"
     }
    },
    "outputs": [
@@ -235,7 +244,7 @@
        "4   0     2       1  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,11 +256,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T13:12:17.967128Z",
-     "start_time": "2019-03-16T13:12:15.925335Z"
+     "end_time": "2019-03-16T18:44:15.713495Z",
+     "start_time": "2019-03-16T18:44:13.714722Z"
     },
     "scrolled": false
    },
@@ -290,11 +299,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T13:12:18.713992Z",
-     "start_time": "2019-03-16T13:12:18.020131Z"
+     "end_time": "2019-03-16T18:44:16.460649Z",
+     "start_time": "2019-03-16T18:44:15.766550Z"
     }
    },
    "outputs": [
@@ -305,7 +314,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-fc024fbf955d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mdiscretise\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdiscretizeData\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mviewData\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdiscretise\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mkde\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-6-fc024fbf955d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mdiscretise\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdiscretizeData\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mviewData\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdiscretise\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mkde\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;32m~/Documents/SU/3i005/Probabilistic_Classification/utils.py\u001b[0m in \u001b[0;36mviewData\u001b[0;34m(data, kde)\u001b[0m\n\u001b[1;32m     30\u001b[0m         \u001b[0max\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msubplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mxticklabels\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m         ax.set_title(\"Distribution of '{0}': {1} in [{2},{3}]\".format(\n\u001b[0;32m---> 32\u001b[0;31m             k, len(data[k].unique()), data[k].min(), data[k].max()))\n\u001b[0m\u001b[1;32m     33\u001b[0m         \u001b[0max\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdistplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkde\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mkde\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m         \u001b[0max\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_xlabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/pandas/core/series.py\u001b[0m in \u001b[0;36munique\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1491\u001b[0m         \u001b[0mCategories\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0ma\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1492\u001b[0m         \"\"\"\n\u001b[0;32m-> 1493\u001b[0;31m         \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mSeries\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1494\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1495\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mis_datetime64tz_dtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/pandas/core/base.py\u001b[0m in \u001b[0;36munique\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1047\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1048\u001b[0m             \u001b[0;32mfrom\u001b[0m \u001b[0mpandas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcore\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0malgorithms\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0munique1d\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1049\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0munique1d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1050\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1051\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -341,11 +350,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T13:12:58.548511Z",
-     "start_time": "2019-03-16T13:12:57.002000Z"
+     "end_time": "2019-03-16T18:44:19.566303Z",
+     "start_time": "2019-03-16T18:44:17.945326Z"
     },
     "scrolled": false
    },
@@ -383,11 +392,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T14:47:07.693260Z",
-     "start_time": "2019-03-16T14:47:07.673616Z"
+     "end_time": "2019-03-16T18:44:20.464814Z",
+     "start_time": "2019-03-16T18:44:20.450187Z"
     }
    },
    "outputs": [
@@ -399,7 +408,7 @@
        " 'max5pourcent': 0.7820639101795066}"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,11 +437,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T13:13:03.201038Z",
-     "start_time": "2019-03-16T13:13:03.187426Z"
+     "end_time": "2019-03-16T18:44:22.208540Z",
+     "start_time": "2019-03-16T18:44:22.196377Z"
     }
    },
    "outputs": [],
@@ -479,11 +488,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T13:13:05.677083Z",
-     "start_time": "2019-03-16T13:13:05.652961Z"
+     "end_time": "2019-03-16T18:45:06.994203Z",
+     "start_time": "2019-03-16T18:45:06.974377Z"
     }
    },
    "outputs": [
@@ -504,11 +513,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T13:13:07.981649Z",
-     "start_time": "2019-03-16T13:13:07.949737Z"
+     "end_time": "2019-03-16T18:45:26.515612Z",
+     "start_time": "2019-03-16T18:45:26.493970Z"
     }
    },
    "outputs": [
@@ -542,11 +551,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T13:13:10.287576Z",
-     "start_time": "2019-03-16T13:13:10.072752Z"
+     "end_time": "2019-03-16T18:45:30.020812Z",
+     "start_time": "2019-03-16T18:45:29.820738Z"
     }
    },
    "outputs": [
@@ -563,7 +572,7 @@
        "  3: 0.1782178217821782}}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,11 +590,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T13:13:13.221861Z",
-     "start_time": "2019-03-16T13:13:13.187209Z"
+     "end_time": "2019-03-16T18:45:31.499862Z",
+     "start_time": "2019-03-16T18:45:31.483848Z"
     }
    },
    "outputs": [
@@ -598,7 +607,7 @@
        " 3: {0: 0.5527950310559007, 1: 0.4472049689440994}}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,11 +638,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T13:13:55.484861Z",
-     "start_time": "2019-03-16T13:13:55.453763Z"
+     "end_time": "2019-03-16T18:45:34.919109Z",
+     "start_time": "2019-03-16T18:45:34.893096Z"
     }
    },
    "outputs": [
@@ -655,11 +664,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T13:13:56.800461Z",
-     "start_time": "2019-03-16T13:13:56.781058Z"
+     "end_time": "2019-03-16T18:45:35.695198Z",
+     "start_time": "2019-03-16T18:45:35.676884Z"
     }
    },
    "outputs": [
@@ -698,11 +707,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T13:14:10.562220Z",
-     "start_time": "2019-03-16T13:14:10.544837Z"
+     "end_time": "2019-03-16T18:45:38.138134Z",
+     "start_time": "2019-03-16T18:45:38.121948Z"
     }
    },
    "outputs": [
@@ -724,11 +733,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T13:14:13.641462Z",
-     "start_time": "2019-03-16T13:14:13.616568Z"
+     "end_time": "2019-03-16T18:45:39.309243Z",
+     "start_time": "2019-03-16T18:45:39.289768Z"
     }
    },
    "outputs": [
@@ -762,7 +771,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(ici votre réponse)"
+    "# TODO"
    ]
   },
   {
@@ -785,11 +794,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T13:14:34.037583Z",
-     "start_time": "2019-03-16T13:14:34.003563Z"
+     "end_time": "2019-03-16T18:46:30.219846Z",
+     "start_time": "2019-03-16T18:46:30.200942Z"
     }
    },
    "outputs": [
@@ -817,11 +826,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T13:14:35.339328Z",
-     "start_time": "2019-03-16T13:14:35.310113Z"
+     "end_time": "2019-03-16T18:46:31.246622Z",
+     "start_time": "2019-03-16T18:46:31.227645Z"
     }
    },
    "outputs": [
@@ -867,11 +876,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T13:14:38.829804Z",
-     "start_time": "2019-03-16T13:14:38.790304Z"
+     "end_time": "2019-03-16T18:46:34.169780Z",
+     "start_time": "2019-03-16T18:46:34.147170Z"
     }
    },
    "outputs": [
@@ -924,7 +933,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(votre réponse ici)"
+    "# TODO"
    ]
   },
   {
@@ -946,7 +955,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(votre réponse ici)"
+    "# TODO"
    ]
   },
   {
@@ -962,11 +971,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-08T21:39:54.302996Z",
-     "start_time": "2019-03-08T21:39:52.897111Z"
+     "end_time": "2019-03-16T18:46:57.609226Z",
+     "start_time": "2019-03-16T18:46:56.416119Z"
     }
    },
    "outputs": [
@@ -977,7 +986,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1005,11 +1014,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-08T21:39:55.381314Z",
-     "start_time": "2019-03-08T21:39:55.148344Z"
+     "end_time": "2019-03-16T18:46:59.732868Z",
+     "start_time": "2019-03-16T18:46:59.670824Z"
     }
    },
    "outputs": [
@@ -1020,7 +1029,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1031,11 +1040,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-08T21:39:58.300603Z",
-     "start_time": "2019-03-08T21:39:58.102213Z"
+     "end_time": "2019-03-16T18:47:02.002568Z",
+     "start_time": "2019-03-16T18:47:01.942957Z"
     }
    },
    "outputs": [
@@ -1046,7 +1055,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1085,17 +1094,16 @@
     "</div>\n",
     "Écrire comment se décompose la vraisemblance $P(attr1,attr2,attr3,\\cdots|target)$.\n",
     "\n",
-    "Écrire comment se décompole la distribution a posteriori $P(target|attr1,attr2,attr3,\\cdots)$ <em>(ou du moins une fonction proportionnelle à cette distribution a posteriori)</em>."
+    "Écrire comment se décompose la distribution a posteriori $P(target|attr1,attr2,attr3,\\cdots)$ <em>(ou du moins une fonction proportionnelle à cette distribution a posteriori)</em>."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(votre réponse ici)\n",
-    "$$P(attr1,attr2,attr3,\\cdots|target)=...$$\n",
+    "$$P(attr_1,attr_2,\\cdots,attr_n|target)=P(attr_1|target)\\cdot P(attr_2|target)\\cdots P(attr_n|target)$$\n",
     "\n",
-    "$$P(target|attr1,attr2,attr3,\\cdots)=...$$"
+    "$$P(target|attr_1,attr_2,\\cdots attr_n)\\propto \\frac{P(target|attr_1)\\cdot P(target|attr_2)\\cdots P(target|attr_n)}{[P(target)]^{n-1}}$$"
    ]
   },
   {
@@ -1121,11 +1129,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-08T21:40:02.731932Z",
-     "start_time": "2019-03-08T21:40:02.464369Z"
+     "end_time": "2019-03-16T18:56:39.046012Z",
+     "start_time": "2019-03-16T18:56:38.960346Z"
     }
    },
    "outputs": [
@@ -1136,7 +1144,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1154,11 +1162,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-08T21:40:04.561436Z",
-     "start_time": "2019-03-08T21:40:04.533810Z"
+     "end_time": "2019-03-16T18:56:40.782948Z",
+     "start_time": "2019-03-16T18:56:40.762440Z"
     }
    },
    "outputs": [
@@ -1206,11 +1214,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T14:55:22.938586Z",
-     "start_time": "2019-03-16T14:55:22.840361Z"
+     "end_time": "2019-03-16T18:56:42.806194Z",
+     "start_time": "2019-03-16T18:56:42.710150Z"
     }
    },
    "outputs": [
@@ -1240,11 +1248,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T15:57:45.671321Z",
-     "start_time": "2019-03-16T15:57:45.581768Z"
+     "end_time": "2019-03-16T18:56:44.185343Z",
+     "start_time": "2019-03-16T18:56:44.106421Z"
     },
     "scrolled": true
    },
@@ -1288,11 +1296,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-08T21:53:50.260681Z",
-     "start_time": "2019-03-08T21:53:50.221280Z"
+     "end_time": "2019-03-16T18:56:49.565506Z",
+     "start_time": "2019-03-16T18:56:49.527537Z"
     }
    },
    "outputs": [
