Finished CondMutInfo & Kruskal, but bugging => see L376

--- a/test_notebook.ipynb
+++ b/test_notebook.ipynb
@@ -1629,11 +1629,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 99,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T19:00:47.795365Z",
-     "start_time": "2019-03-26T19:00:47.721566Z"
+     "end_time": "2019-03-26T21:59:22.670617Z",
+     "start_time": "2019-03-26T21:59:22.607195Z"
     },
     "scrolled": true
    },
@@ -1673,81 +1673,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 100,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T19:06:55.664452Z",
-     "start_time": "2019-03-26T19:06:55.609223Z"
+     "end_time": "2019-03-26T21:59:25.639864Z",
+     "start_time": "2019-03-26T21:59:24.243688Z"
     }
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sex  target  age\n",
-      "0    0       4      0.000470\n",
-      "             6      0.000470\n",
-      "             7      0.001879\n",
-      "             8      0.002819\n",
-      "             9      0.004698\n",
-      "             10     0.000940\n",
-      "     1       2      0.005501\n",
-      "             3      0.004126\n",
-      "             4      0.027505\n",
-      "             5      0.024755\n",
-      "             6      0.026130\n",
-      "             7      0.038507\n",
-      "             8      0.028880\n",
-      "             9      0.023379\n",
-      "             10     0.030256\n",
-      "             11     0.015128\n",
-      "             12     0.002751\n",
-      "1    0       2      0.000940\n",
-      "             3      0.001879\n",
-      "             4      0.003288\n",
-      "             5      0.004698\n",
-      "             6      0.005167\n",
-      "             7      0.007046\n",
-      "             8      0.015502\n",
-      "             9      0.006577\n",
-      "             10     0.006107\n",
-      "             11     0.001879\n",
-      "             13     0.000470\n",
-      "     1       1      0.004126\n",
-      "             2      0.005501\n",
-      "             3      0.016503\n",
-      "             4      0.064637\n",
-      "             5      0.035757\n",
-      "             6      0.068763\n",
-      "             7      0.046759\n",
-      "             8      0.045383\n",
-      "             9      0.020629\n",
-      "             10     0.015128\n",
-      "             11     0.005501\n",
-      "dtype: float64\n"
-     ]
-    },
-    {
-     "ename": "NotImplementedError",
-     "evalue": "merging with more than one level overlap on a multi-index is not implemented",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-71-cc4057a9741a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m cmis=np.array([[0 if x==y else projet.ConditionalMutualInformation(train,x,y,\"target\") \n\u001b[1;32m      2\u001b[0m                 for x in train.keys() if x!=\"target\"]\n\u001b[0;32m----> 3\u001b[0;31m                for y in train.keys() if y!=\"target\"])\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mcmis\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-71-cc4057a9741a>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      1\u001b[0m cmis=np.array([[0 if x==y else projet.ConditionalMutualInformation(train,x,y,\"target\") \n\u001b[1;32m      2\u001b[0m                 for x in train.keys() if x!=\"target\"]\n\u001b[0;32m----> 3\u001b[0;31m                for y in train.keys() if y!=\"target\"])\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mcmis\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-71-cc4057a9741a>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      1\u001b[0m cmis=np.array([[0 if x==y else projet.ConditionalMutualInformation(train,x,y,\"target\") \n\u001b[0;32m----> 2\u001b[0;31m                 for x in train.keys() if x!=\"target\"]\n\u001b[0m\u001b[1;32m      3\u001b[0m                for y in train.keys() if y!=\"target\"])\n\u001b[1;32m      4\u001b[0m \u001b[0mcmis\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Documents/SU/3i005/Probabilistic_Classification/projet.py\u001b[0m in \u001b[0;36mConditionalMutualInformation\u001b[0;34m(df, x, y, z)\u001b[0m\n\u001b[1;32m    331\u001b[0m     \u001b[0mjoint_y_z\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgetJoint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mz\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# P(y, z)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    332\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjoint_x_y_z\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mprior_z\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 333\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjoint_x_y_z\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mprior_z\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mjoint_x_z\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    334\u001b[0m     \u001b[0mprobas_quotient\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjoint_x_y_z\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mprior_z\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mjoint_x_z\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mjoint_y_z\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    335\u001b[0m     \u001b[0mlog_probas\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprobas_quotient\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog2\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# log2(_)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/pandas/core/ops.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(left, right)\u001b[0m\n\u001b[1;32m   1043\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mNotImplemented\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1044\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1045\u001b[0;31m         \u001b[0mleft\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mright\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_align_method_SERIES\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mleft\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mright\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1046\u001b[0m         \u001b[0mres_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_op_result_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mleft\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mright\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1047\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/pandas/core/ops.py\u001b[0m in \u001b[0;36m_align_method_SERIES\u001b[0;34m(left, right, align_asobject)\u001b[0m\n\u001b[1;32m    967\u001b[0m                 \u001b[0mright\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mright\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobject\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    968\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 969\u001b[0;31m             \u001b[0mleft\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mright\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mleft\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0malign\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mright\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    970\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    971\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mleft\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mright\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/pandas/core/series.py\u001b[0m in \u001b[0;36malign\u001b[0;34m(self, other, join, axis, level, copy, fill_value, method, limit, fill_axis, broadcast_axis)\u001b[0m\n\u001b[1;32m   3249\u001b[0m                                          \u001b[0mfill_value\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfill_value\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmethod\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmethod\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3250\u001b[0m                                          \u001b[0mlimit\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlimit\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfill_axis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfill_axis\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3251\u001b[0;31m                                          broadcast_axis=broadcast_axis)\n\u001b[0m\u001b[1;32m   3252\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3253\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mrename\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36malign\u001b[0;34m(self, other, join, axis, level, copy, fill_value, method, limit, fill_axis, broadcast_axis)\u001b[0m\n\u001b[1;32m   7370\u001b[0m                                       \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfill_value\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfill_value\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   7371\u001b[0m                                       \u001b[0mmethod\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmethod\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlimit\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlimit\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 7372\u001b[0;31m                                       fill_axis=fill_axis)\n\u001b[0m\u001b[1;32m   7373\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# pragma: no cover\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   7374\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'unsupported type: %s'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mother\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m_align_series\u001b[0;34m(self, other, join, axis, level, copy, fill_value, method, limit, fill_axis)\u001b[0m\n\u001b[1;32m   7439\u001b[0m                 join_index, lidx, ridx = self.index.join(other.index, how=join,\n\u001b[1;32m   7440\u001b[0m                                                          \u001b[0mlevel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlevel\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 7441\u001b[0;31m                                                          return_indexers=True)\n\u001b[0m\u001b[1;32m   7442\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   7443\u001b[0m             \u001b[0mleft\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_reindex_indexer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjoin_index\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlidx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mjoin\u001b[0;34m(self, other, how, level, return_indexers, sort)\u001b[0m\n\u001b[1;32m   3733\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3734\u001b[0m                 return self._join_multi(other, how=how,\n\u001b[0;32m-> 3735\u001b[0;31m                                         return_indexers=return_indexers)\n\u001b[0m\u001b[1;32m   3736\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3737\u001b[0m         \u001b[0;31m# join on the level\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36m_join_multi\u001b[0;34m(self, other, how, return_indexers)\u001b[0m\n\u001b[1;32m   3831\u001b[0m                              \"overlapping names\")\n\u001b[1;32m   3832\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moverlap\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3833\u001b[0;31m             raise NotImplementedError(\"merging with more than one level \"\n\u001b[0m\u001b[1;32m   3834\u001b[0m                                       \u001b[0;34m\"overlap on a multi-index is not \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3835\u001b[0m                                       \"implemented\")\n",
-      "\u001b[0;31mNotImplementedError\u001b[0m: merging with more than one level overlap on a multi-index is not implemented"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[0.        , 0.07172827, 0.20250622, 0.6417183 , 0.55128095],\n",
+       "       [0.07172827, 0.        , 0.01672381, 0.06361231, 0.12140024],\n",
+       "       [0.20250622, 0.01672381, 0.        , 0.22413205, 0.18890573],\n",
+       "       [0.6417183 , 0.06361231, 0.22413205, 0.        , 0.68149423],\n",
+       "       [0.55128095, 0.12140024, 0.18890573, 0.68149423, 0.        ]])"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1783,21 +1729,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 101,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-20T14:34:49.869445Z",
-     "start_time": "2019-03-20T14:34:49.852448Z"
+     "end_time": "2019-03-26T21:59:29.143201Z",
+     "start_time": "2019-03-26T21:59:29.129552Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.14490408192274776"
+       "0.14490408192274778"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1808,11 +1754,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 121,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-20T14:34:49.884420Z",
-     "start_time": "2019-03-20T14:34:49.871160Z"
+     "end_time": "2019-03-26T22:58:18.815346Z",
+     "start_time": "2019-03-26T22:58:18.800204Z"
     }
    },
    "outputs": [
@@ -1826,7 +1772,7 @@
        "       [0.55128095, 0.        , 0.18890573, 0.68149423, 0.        ]])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1849,11 +1795,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 123,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-20T14:34:49.899065Z",
-     "start_time": "2019-03-20T14:34:49.886026Z"
+     "end_time": "2019-03-26T23:00:18.899476Z",
+     "start_time": "2019-03-26T23:00:18.871897Z"
     }
    },
    "outputs": [
@@ -1861,14 +1807,16 @@
      "data": {
       "text/plain": [
        "[('trestbps', 'chol', 0.6814942282235203),\n",
-       " ('age', 'trestbps', 0.641718295908513),\n",
-       " ('age', 'thalach', 0.6365766485465845),\n",
-       " ('chol', 'oldpeak', 0.5246930555244587),\n",
-       " ('oldpeak', 'slope', 0.25839871090530614),\n",
-       " ('chol', 'ca', 0.2528327956181666)]"
+       " ('age', 'trestbps', 0.6417182959085129),\n",
+       " ('age', 'thalach', 0.6365766485465846),\n",
+       " ('chol', 'oldpeak', 0.5246930555244584),\n",
+       " ('oldpeak', 'slope', 0.25839871090530625),\n",
+       " ('chol', 'ca', 0.25283279561816646),\n",
+       " ('cp', 'trestbps', 0.22413205121660507),\n",
+       " ('thalach', 'thal', 0.15528941819154782)]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
